@@ -2,6 +2,7 @@
 
 		* Added '?a' and '?u' commands, chop spaces from '?x'.
 		* Improvements in search result display.
+		* CDR: search improvements.
 
 2011-09-09  Valek Filippov
 
